align shapes to the correct grid column

--- a/src/ui/styles/blocks/layout.block.css
+++ b/src/ui/styles/blocks/layout.block.css
@@ -26,15 +26,11 @@
 }
 
 .bleed-right {
-  grid-column: 1/-3;
+  grid-column: 2/-1;
 }
 
 .bleed-left {
-  grid-column: 1/-3;
-}
-
-.bleed-right {
-  grid-column: 3/-1;
+  grid-column: 1/-2;
 }
 
 @media (min-width: 888px) {
